Bug 206071 - Not reading image properties
Summary: Not reading image properties
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: DImg-FileIO (other bugs)
Version First Reported In: 1.0.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-03 09:09 UTC by Arthur Castro
Modified: 2022-02-04 06:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arthur Castro 2009-09-03 09:09:39 UTC
Version:           1.0.0-beta4 (using KDE 4.3.0)
Compiler:          gcc (Gentoo 4.3.3-r2 p1.2, pie-10.1.5) 4.3.3 
OS:                Linux
Installed from:    Gentoo Packages

When I add a new picture into my album, its properties (dimensions...) are not read/displayed. It happens in the properties panel, thumbnail info, tool-tip or the Image Editor. My old images (added before I upgraded to beta4) are shown correctly.
Comment 1 caulier.gilles 2009-09-03 09:22:30 UTC
Run digiKam on the console and look which message are displayed when image are registered to database.

Also, copy & paste Help/Components Info dialog contents here...

Gilles Caulier
Comment 2 Arthur Castro 2009-09-03 09:49:05 UTC
Components Info:

digiKam version 1.0.0-beta4
Exiv2 can write to Jp2: Yes
Exiv2 can write to Jpeg: Yes
Exiv2 can write to Pgf: No
Exiv2 can write to Png: Yes
Exiv2 can write to Tiff: Yes
Exiv2 supports XMP metadata: Yes
LibCImg: 130
LibExiv2: 0.18.1
LibJPEG: 62
LibJasper: 1.900.1
LibKDE: 4.3.1 (KDE 4.3.1)
LibKExiv2: 0.6.0
LibKdcraw: 0.5.0
LibLCMS: 118
LibPGF: 6.09.24
LibPNG: 1.2.37
LibQt: 4.5.2
LibRaw: 0.7.2
LibTIFF: LIBTIFF, Version 3.8.2 Copyright (c) 1988-1996 Sam Leffler Copyright (c) 1991-1996 Silicon Graphics, Inc.
Marble widget: 0.8
Parallelized demosaicing: Yes
LibGphoto2: 2.4.3
LibKipi: 0.4.0


And I can't see any message when adding a image...
Comment 3 Arthur Castro 2009-09-04 05:13:19 UTC
I've got this messages this time:

timeChanged               
void SunLocator::update() 
Error: Directory Canon with 5632 entries considered invalid; not read.
Warning: XMP toolkit support not compiled in.                         
Warning: Failed to decode XMP metadata.                               
...
Error: Upper boundary of data for directory Nikon2, entry 0x0f00 is out of bounds: Offset = 0x000002f2, size = 100, exceeds buffer size by 62 Bytes; adjusting the size
...
timeChanged
void SunLocator::update()
timeChanged
void SunLocator::update()
Warning: XMP toolkit support not compiled in.
Warning: Failed to decode XMP metadata.
...

Was that messages that you're expecting? Should I compile with debug information?

Thanks.
Comment 4 caulier.gilles 2009-09-04 06:34:29 UTC
Sound like Exiv2 is not compled with XMP support. Please update it.

Other messages come from Exiv2 too, when nikon makernotes are parsed. It's warning.

Gilles Caulier
Comment 5 Arthur Castro 2009-09-04 07:59:43 UTC
Updated... and no difference. :(

Is this information (dimensions, e.g.) read from database or from the image file (on the fly)? If it's from database, is there a way to check?
Comment 6 caulier.gilles 2009-09-04 08:09:32 UTC
Informations are taken from files when items are imported and stored to database.

Gilles Caulier
Comment 7 Arthur Castro 2009-09-04 08:10:09 UTC
Hum... width and height from the table ImageInformation is 0 and 0 for all jpeg files. PNG and GIF are ok.
Comment 8 caulier.gilles 2009-09-04 08:16:16 UTC
Ok. sound like a problem in you computer with new version of libjpeg out few month ago. It's certainly a binary compatibility problem with package.


It's strange because you report LibJPEG: 62 previously...

Are you sure to have only one version of this library installed on your computer ?

Gilles Caulier
Comment 9 Andreas Huggel 2009-09-04 08:17:16 UTC
There is a small inconsistency: Exiv2 is compiled without XMP but digiKam says

Exiv2 supports XMP metadata: Yes

Andreas
Comment 10 Arthur Castro 2009-09-04 08:33:20 UTC
I only have jpeg version 6b in my system. More precisely, media-libs/jpeg-6b-r8 (gentoo), since the beginning of the year... and digiKam-1.0.0-beta3 was working fine.

And yes, strange... exiv2 was without XMP.
Comment 11 Marcel Wiesweg 2009-09-04 16:43:52 UTC
SVN commit 1019827 by mwiesweg:

Fix subtle bug in the JPEG loader that broke scanning images:
jpeg_finish_decompress was moved from the data loading code down below reading the ICC profile,
which was broken previously because the decompressing had already been closed.
When image data is not loaded (as for scanning), calling jpeg_finish_decompress without
calling jpeg_start_decompress before resulted in an error, which meant the loader returned
false before setting width and height.

BUG: 206071

 M  +2 -1      NEWS  
 M  +15 -2     libs/dimg/loaders/jpegloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019827