Fix subtle bug in the JPEG loader that broke scanning images: jpeg_finish_decompress was moved from the data loading code down below reading the ICC profile, which was broken previously because the decompressing had already been closed. When image data is not loaded (as for scanning), calling jpeg_finish_decompress without calling jpeg_start_decompress before resulted in an error, which meant the loader returned false before setting width and height.

BUG: 206071

svn path=/trunk/extragear/graphics/digikam/; revision=1019827